Segunda modificacion de 404.html

--- a/404.html
+++ b/404.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     <!-- Use title if it's in the page YAML frontmatter -->
-    <title>Error 404, no encontrado</title>
+    <title>Error 404, no </title>
 
     
     
